[package]
name = "busypot"
version = "0.2.0"
edition = "2021"
authors = ["Alex Sedighi <alex@nodle.come>"]

[dependencies]
subxt = "0.37.0"
subxt-signer = { version = "0.37.0", features = ["subxt"] }

tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3.30"

codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
scale-info = { version = "2.11.3", default-features = false }
hex = "0.4.3"

clap = { version = "4.5.16", features = ["derive"] }
urlencoding = "2.1.3"
